[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-filter-pwa"
version = "1.0.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-Cors==4.0.0",
    "numpy==1.26.0",
    "scipy==1.11.4",
    "gunicorn==21.2.0"
]

[tool.vercel]
build-command = "pip install -r requirements.txt"
output-directory = "."
